# cloud-task-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  projects.py  tasks.py
app/core/: celery_app.py  config.py  logging_config.py
app/db/: models.py
app/schemas/: project.py  task.py  user.py
app/services/: cache.py
app/tasks/: sample_tasks.py
docker/: Dockerfile  nginx.conf
migrations/: env.py
scripts/: init_env.sh
tests/: conftest.py  test_auth.py
